fixed element alignment and responsiveness, add filterable dropdown

--- a/style.css
+++ b/style.css
@@ -78,20 +78,37 @@
   padding: 0;
 }
 .port img {
-  padding-top: 10%;
+  width: 100%;
+  margin-top: 7.5%;
 }
 .portfolio-projects {
-  display: table;
-  margin: 0 auto;
-  }
-  .portfolio-projects ul {
-    list-style: none;
-    margin-left: 0;
-    margin-right: 0;
-    }
-    .portfolio-projects li {
-      display: inline-table;
-      float: none;
+
+}
+#projects {
+  margin: 0;
+  padding: 0;
+}
+#projects li {
+  float: left;
+  list-style: none;
+}
+.item-project {
+  position: relative;
+  overflow: hidden;
+}
+.item-project .project-name {
+  position: relative;
+  z-index: 2;
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  border-bottom: 1px solid #000;
+  background-color: #fff;
+}
+.item-project .project-name p {
+  margin: 0;
+  padding-top: 2.5%;
+  margin-left: 5%;
 }
 
 img {
